# AnimeData

./: .gitignore  README.md  SNK.html  ad_test.py  adproject.toml  anime_list.html  animedata.py  animedata_source.json  animedata_utility.py  main_anime_list.json  pyproject.toml  showdata.py  showdata_source.json  showdata_test.py  tests.py  watchdata.py  watchdata_source.json  wd_test.py
animedata/common/: dict_checking.py  lib_interactions.py  metadata.py  saving_process.py
animedata/tests/: test_dict_checking.py  test_lib_interaction.py  test_saving_process.py
src/: animedata_source.json
src/animedata/: animedata.py
