[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/.git",
  ".gitignore"
  ]

[project]
name = "AnimeData"
version = "0.1.1"
authors = [
 {name="cassphir", email=""}
]
description = "Bibliothèque open-source des données sur les animés, utilitaire intégré."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/cassphir/AnimeData"
"Bug" = "https://github.com/cassphir/AnimeData/issues"
