[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/.git",
  ".gitignore"
  ]

[project]
name = "animedata"
version = "0.1.4"
authors = [
 {name="swarthur", email=""}
]
description = "Bibliothèque open-source des données sur les animés, utilitaire intégré."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["tomli"]

[project.urls]
"Github" = "https://github.com/swarthur/animedata"
"Bug" = "https://github.com/swarthur/animedata/issues"
