[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/dist",
  "/.git",
  ".gitignore"
  ]
include = [
  "animedata/*"
]

[project]
name = "animedata"
version = "1.0.0"
authors = [
 {name="swarthur"}
]
description = "Python project to get and store anime data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Github" = "https://github.com/swarthur/animedata"
"Bug" = "https://github.com/swarthur/animedata/issues"
